# simper_fts5

./: CMakeLists.txt  readme.md
include/: fts5_unicode2.h  simper_int.h  uni.h
src/: fts5_unicode2.c  simper.c  uni.c
